# Arcane-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  build-windows.bat  premake5.lua
Arcane/: CMakeLists.txt  premake5.lua  setup.py
Arcane-ScriptCore/: Arcane-ScriptCore.csproj  CMakeLists.txt
Arcane-ScriptCore/src/Arcane/ECS/: Entity.cs
Arcane-ScriptCore/src/Arcane/Maths/: Vector3.cs
Arcane/src/: Arcane.h
Arcane/src/Arcane/: Arcane.h
Arcane/src/Arcane/Animation/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationControllerSerializer.cpp  AnimationControllerSerializer.h  AnimationSerializer.cpp  AnimationSerializer.h
Arcane/src/Arcane/Assets/: Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetPack.cpp  AssetPack.h  AssetQueue.cpp  AssetQueue.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
Arcane/src/Arcane/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  InputManager.cpp  InputManager.h  Layer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Arcane/src/Arcane/ECS/: Component.h  Entity.cpp  Entity.h
Arcane/src/Arcane/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  PlatformImGui.cpp  PlatformImGui.h
Arcane/src/Arcane/Physics/: BoxCollider.cpp  BoxCollider.h  PhysicsCollisionListener.cpp  PhysicsCollisionListener.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h
Arcane/src/Arcane/Platform/Metal/: MetalContext.cpp  MetalContext.h  MetalDevice.h  MetalDevice.mm
Arcane/src/Arcane/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDescriptorSet.cpp  OpenGLDescriptorSet.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImguiLayer.cpp  OpenGLImguiLayer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexDescriptor.cpp  OpenGLVertexDescriptor.h
Arcane/src/Arcane/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSet.cpp  VulkanSet.h  VulkanShader.cpp  VulkanShader.h  VulkanSkyBox.cpp  VulkanSkyBox.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexDescriptor.cpp  VulkanVertexDescriptor.h
Arcane/src/Arcane/Platform/Windows/: WindowsUtils.cpp
Arcane/src/Arcane/Project/: Project.cpp  Project.h  ProjectDeserializer.cpp  ProjectDeserializer.h
Arcane/src/Arcane/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ContextUtils.h  DescriptorSet.cpp  DescriptorSet.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.h  MaterialDeserializer.cpp  MaterialDeserializer.h  MaterialSerializer.cpp  MaterialSerializer.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Pipeline.cpp  Pipeline.h  Quad.cpp  Quad.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  SceneRenderer2D.cpp  SceneRenderer2D.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  SubMesh.cpp  SubMesh.h  (+6 more)
Arcane/src/Arcane/Scene/: Scene.cpp  Scene.h  SceneDeserializer.cpp  SceneDeserializer.h  SceneManager.cpp  SceneManager.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h
Arcane/src/Arcane/Scripting/: PythonBindings.cpp  PythonBindings.h  Script.cpp  Script.h  ScriptGlue.cpp  ScriptGlue.h  ScriptingEngine.cpp  ScriptingEngine.h
Arcane/src/Arcane/Utils/: FileWatcher.cpp  FileWatcher.h  Utils.h
ArcaneRuntime/: CMakeLists.txt
ArcaneRuntime/res/: test.arcanepack
ArcaneRuntime/src/: ArcaneRuntime.cpp  RuntimeLayer.cpp  RuntimeLayer.h  main.cpp
ArcaneScript/: CMakeLists.txt
ArcaneScript/src/ArcaneScript/Scanner/: Scanner.cpp  Scanner.h
ArcaneScript/src/ArcaneScript/Token/: Token.cpp  Token.h  TokenTypes.h
BuildScripts/: build-windows.bat
EnchantingTable/: CMakeLists.txt  imgui.ini  premake5.lua
EnchantingTable/src/: EditorLayer.cpp  EditorLayer.h  EnchantingTable.cpp  OpenGLTestLayer.cpp  OpenGLTestLayer.h
EnchantingTable/src/Assets/Models/: Backpack.fbx  Backpack2.fbx  Cube.fbx  MyModel.fbx  Torus.fbx
EnchantingTable/src/Assets/Scenes/: TestScene.json  imgui.ini
EnchantingTable/src/Assets/Shaders/: Basic.frag  Basic.vert  Grid.frag  Grid.vert  GridFrag.spv  GridVert.spv  Mesh.frag  Mesh.vert  MeshFrag.spv  MeshFrag.vert  MeshTextured.frag  MeshTextured.spv  MeshVert.spv  Screen.vert  ScreenShader.frag  ScreenShader.vert  ScreenShaderFrag.spv  ScreenVert.spv  frag.spv  vert.spv
EnchantingTable/src/Controllers/: CameraController.h  OrthographicController.cpp  OrthographicController.h  PerspectiveController.cpp  PerspectiveController.h
EnchantingTable/src/EditorAssets/Shaders/: Grid.vert  GridFrag.spv  GridVert.spv  Mesh.arcaneshader  Mesh.vert  MeshTextured.frag  (+19 more)
EnchantingTable/src/Panels/: AnimationControllerPanel.cpp  AnimationControllerPanel.h  AnimationPanel.cpp  AnimationPanel.h  EntityPanel.cpp  EntityPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  FileBrowser.cpp  FileBrowser.h  MaterialViewerPanel.cpp  MaterialViewerPanel.h  PanelStructs.h  ScenePanel.cpp  ScenePanel.h  SpriteEditor.cpp  SpriteEditor.h
Kinetics/: CMakeLists.txt
Kinetics/include/Kinetics/Core/: PhysicsClock.h  World.h
Kinetics/include/Kinetics/Maths/: Vector.h
Kinetics/include/Kinetics/Structures/: Collisions.h  DataStructures.h  PhysicsBody.h  Shape.h
Kinetics/src/Kinetics/Core/: PhysicsClock.cpp  World.cpp
Kinetics/src/Kinetics/Structures/: PhysicsBody.cpp  Shape.cpp
(+4 files in other folders)
